--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <img class="box" src="imagens/apresentacao.png" alt="Ilustração de apresentação do site">
         </div>
         <div class="coluna-direita">
-            <h2 class="boas-vindas">Bem vindo ao Quebrando o Gelo (e o Ovo)</h2>
-            <p class="boas-vindas">O site foi criado para os cozinheiros amadores de primeira viagem, para quem quer aproveitar os ingredientes da geladeira mas principalmente para quem quer cozinhar e não sabe o quê! Aqui você nos diz o que tem e nós te ajudamos com a receita.</p>
+            <div class="boas-vindas">
+                <h2>Bem vindo ao<strong class="destaque"> Quebrando o Gelo (e o Ovo)</strong></h2>
+                <p>O site foi criado para os cozinheiros amadores de primeira viagem, para quem quer aproveitar os ingredientes da geladeira mas principalmente para quem quer cozinhar e não sabe o quê! Aqui você nos diz o que tem e nós te ajudamos com a receita.</p>
+            </div>
         </div>
     </section>
 
