Mudanças na organização e página mais bonita visualmente

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <header id="paginainicial">
-        <div id="blocoinicial">
+    <header>
+        <div id="bloco-de-titulo">
             <img src="imagens/ovo.png" alt="ovo" class="ovo">
             <h1>Quebrando o Gelo <br><span class="destaque">(E o ovo)</span></h1>
             <p>Seu guia culinário</p>
@@ -21,7 +21,7 @@
             <img class="box" src="imagens/apresentacao.png" alt="Ilustração de apresentação do site">
         </div>
         <div class="coluna-direita">
-            <div class="boas-vindas">
+            <div id="apresentacao">
                 <h2>Bem vindo ao<strong class="destaque"> Quebrando o Gelo (e o Ovo)</strong></h2>
                 <p>O site foi criado para os cozinheiros amadores de primeira viagem, para quem quer aproveitar os ingredientes da geladeira mas principalmente para quem quer cozinhar e não sabe o quê! Aqui você nos diz o que tem e nós te ajudamos com a receita.</p>
             </div>
