Mudanças diversas de cores do site

--- a/index.html
+++ b/index.html
@@ -61,25 +61,27 @@
         </div>
     </section>
 
-    <section id="receita ing">
+    <section id="receita">
         <div class ="coluna-esquerda">
             <div id="blocoreceita">
-                <form action="cadastro.py" method="get" class="botao">
+                <form action="cadastro.py" method="get" class="label">
                     <p>
                         <label for="receita">Receita: </label>
-                        <input type="text" id="receita" required placeholder="Digite sua Receita">                         
+                        <input type="text" required placeholder="Digite sua Receita">                         
                         <input type="submit" value="Enviar" >
                         <input type="reset" value="Limpar">
                     </p>
                 </form>
-                <li>Exemplos de receitas</li>
-                <li>Exemplos de receitas</li>
-                <li>Exemplos de receitas</li>
-                <li>Exemplos de receitas</li>
-                <li>Exemplos de receitas</li>
-                <li>Exemplos de receitas</li>
-                <li>Exemplos de receitas</li>
-                <li>Exemplos de receitas</li>
+                <ul>
+                    <li>Exemplos de receitas</li>
+                    <li>Exemplos de receitas</li>
+                    <li>Exemplos de receitas</li>
+                    <li>Exemplos de receitas</li>
+                    <li>Exemplos de receitas</li>
+                    <li>Exemplos de receitas</li>
+                    <li>Exemplos de receitas</li>
+                    <li>Exemplos de receitas</li>
+                </ul>
             </div>    
         </div>
         <div class="coluna-direita">
@@ -94,7 +96,7 @@
 
     <section id="preparo">
         <h2 id="titulo-receita">Baião de Dois</h2>
-                <form action="cadastro.py" method="get" class="botao ing">
+                <form action="cadastro.py" method="get" class="label ing">
                     <p>
                         <label for="Ingredientes">Ingredientes:</label>
                         <input type="text" id="Ingredientes" required placeholder="Digite seus Ingredientes"> 
