Adição do favicon do site e redução de código desnecessário

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <title>Quebrando o Gelo (E o ovo)</title>
 </head>
 
@@ -78,32 +82,31 @@
                     <li>Exemplos de receitas</li>
                     <li>Exemplos de receitas</li>
                     <li>Exemplos de receitas</li>
-                    <li>Exemplos de receitas</li>
-                    <li>Exemplos de receitas</li>
-                    <li>Exemplos de receitas</li>
                 </ul>
             </div>    
         </div>
         <div class="coluna-direita">
             <div class="galeria">
-                <img src="imagens/exemplo1.jpg" alt="">
-                <img src="imagens/exemplo2.jpg" alt="">
-                <img src="imagens/exemplo3.jpg" alt="">
-                <img src="imagens/exemplo4.jpg" alt="">
+                <img src="imagens/exemplo1.jpg" alt="Exemplo 1">
+                <img src="imagens/exemplo2.jpg" alt="Exemplo 2">
+                <img src="imagens/exemplo3.jpg" alt="Exemplo 3">
+                <img src="imagens/exemplo4.jpg" alt="Exemplo 4">
             </div>
         </div>
     </section>
 
     <section id="preparo">
-        <h2 id="titulo-receita">Baião de Dois</h2>
-                <form action="cadastro.py" method="get" class="label ing">
-                    <p>
-                        <label for="Ingredientes">Ingredientes:</label>
-                        <input type="text" id="Ingredientes" required placeholder="Digite seus Ingredientes"> 
-                        <input type="submit" value="Enviar">
-                        <input type="reset" value="Limpar">
-                    </p>
-                </form>
+        <div id="cabecalho-ingredientes">
+            <h2 id="titulo-receita">Baião de Dois</h2>
+            <form action="cadastro.py" method="get" class="label ing">
+                <p>
+                    <label for="Ingredientes">Ingredientes:</label>
+                    <input type="text" id="Ingredientes" required placeholder="Digite seus Ingredientes">
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Limpar">
+                </p>
+            </form>
+        </div>
         <div id="ingredientes">
             <h3>Ingredientes</h3>
             <ul>
