--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="pagina-inicial">
         <div id="bloco-de-titulo">
             <img src="imagens/ovo.png" alt="ovo" class="ovo">
             <h1>Quebrando o Gelo <br><span class="destaque">(E o ovo)</span></h1>
@@ -54,24 +54,24 @@
     </section>
 
     <section id="menu">
-        <div id="blocomenu">
-            <ol>
-                <li><a href="#paginainicial">Página Inicial</a></li>
+        <nav id="blocomenu">
+            <ul>
+                <li><a href="#pagina-inicial">Página Inicial</a></li>
                 <li><a href="#bem-vindo">Apresentação</a></li>
                 <li><a href="#contato">Contato</a></li>
-                <li><a href="#receita ing">Buscar por Receitas</a></li>
+                <li><a href="#receita">Buscar por Receitas</a></li>
                 <li><a href="#preparo">Buscar por Ingredientes</a></li>
-            </ol>
-        </div>
+            </ul>
+        </nav>
     </section>
 
-    <section id="receita">
+    <section id="receitas">
         <div class ="coluna-esquerda">
             <div id="blocoreceita">
                 <form action="cadastro.py" method="get" class="label">
                     <p>
                         <label for="receita">Receita: </label>
-                        <input type="text" required placeholder="Digite sua Receita">                         
+                        <input id="receita" type="text" required placeholder="Digite sua Receita">                         
                         <input type="submit" value="Enviar" >
                         <input type="reset" value="Limpar">
                     </p>
