--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
     <title>Quebrando o Gelo (E o ovo)</title>
 </head>
 
 <body>
-    <header id="pagina-inicial">
+    <header>
         <div id="bloco-de-titulo">
             <img src="imagens/ovo.png" alt="ovo" class="ovo">
             <h1>Quebrando o Gelo <br><span class="destaque">(E o ovo)</span></h1>
@@ -54,59 +50,51 @@
     </section>
 
     <section id="menu">
-        <nav id="blocomenu">
-            <ul>
-                <li><a href="#pagina-inicial">Página Inicial</a></li>
+        <div id="blocomenu">
+            <ol>
+                <li><a href="#paginainicial">Página Inicial</a></li>
                 <li><a href="#bem-vindo">Apresentação</a></li>
                 <li><a href="#contato">Contato</a></li>
-                <li><a href="#receita">Buscar por Receitas</a></li>
+                <li><a href="#busca-receita">Buscar por Receitas</a></li>
                 <li><a href="#preparo">Buscar por Ingredientes</a></li>
-            </ul>
-        </nav>
+            </ol>
+        </div>
     </section>
 
-    <section id="receitas">
-        <div class ="coluna-esquerda">
+    <section id="busca-receita">
+        <div class="coluna-esquerda">
             <div id="blocoreceita">
-                <form action="cadastro.py" method="get" class="label">
+                <form method="get" class="botao">
                     <p>
                         <label for="receita">Receita: </label>
-                        <input id="receita" type="text" required placeholder="Digite sua Receita">                         
-                        <input type="submit" value="Enviar" >
+                        <input type="text" id="receita" required placeholder="Digite sua Receita">                         
+                        <input type="submit" value="Enviar">
                         <input type="reset" value="Limpar">
                     </p>
                 </form>
-                <ul>
-                    <li>Exemplos de receitas</li>
-                    <li>Exemplos de receitas</li>
-                    <li>Exemplos de receitas</li>
-                    <li>Exemplos de receitas</li>
-                    <li>Exemplos de receitas</li>
-                </ul>
+                <p style="text-align: center; color: var(--AmareloSol); font-size: 1rem;">Use a busca acima para encontrar a receita perfeita!</p>
             </div>    
         </div>
         <div class="coluna-direita">
             <div class="galeria">
-                <img src="imagens/exemplo1.jpg" alt="Exemplo 1">
-                <img src="imagens/exemplo2.jpg" alt="Exemplo 2">
-                <img src="imagens/exemplo3.jpg" alt="Exemplo 3">
-                <img src="imagens/exemplo4.jpg" alt="Exemplo 4">
+                <img src="imagens/exemplo1.jpg" alt="">
+                <img src="imagens/exemplo2.jpg" alt="">
+                <img src="imagens/exemplo3.jpg" alt="">
+                <img src="imagens/exemplo4.jpg" alt="">
             </div>
         </div>
     </section>
 
     <section id="preparo">
-        <div id="cabecalho-ingredientes">
-            <h2 id="titulo-receita">Baião de Dois</h2>
-            <form action="cadastro.py" method="get" class="label ing">
-                <p>
-                    <label for="Ingredientes">Ingredientes:</label>
-                    <input type="text" id="Ingredientes" required placeholder="Digite seus Ingredientes">
-                    <input type="submit" value="Enviar">
-                    <input type="reset" value="Limpar">
-                </p>
-            </form>
-        </div>
+        <h2 id="titulo-receita">Baião de Dois</h2>
+                <form method="get" class="botao ing">
+                    <p>
+                        <label for="Ingredientes">Ingredientes:</label>
+                        <input type="text" id="Ingredientes" required placeholder="Digite seus Ingredientes"> 
+                        <input type="submit" value="Enviar">
+                        <input type="reset" value="Limpar">
+                    </p>
+                </form>
         <div id="ingredientes">
             <h3>Ingredientes</h3>
             <ul>
@@ -137,5 +125,6 @@
             </ol>
         </div>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
