Mais remoção de código

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </section>
 
     <section id="preparo">
-        <h2 id="titulo-receita">Baião de Dois</h2>
+        <h2 id="titulo-receita">Nome da Receita</h2>
             <form method="get">
                 <p>
                     <label for="Ingredientes">Ingredientes:</label>
@@ -105,7 +105,7 @@
                 <li>Seus ingredientes aqui</li>
             </ul>
         </div>
-        <div id="mododepreparo">
+        <div id="modo-de-preparo">
             <h3>Modo de Preparo</h3>
             <ol>
                 <li>Seu modo de preparo aqui</li>
