--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     </section>
 
     <section id="menu">
+    <button id="btn-mobile">☰</button>
+
         <nav>
             <ol>
                 <li><a href="#pagina-inicial">Página Inicial</a></li>
