Pequenas mudanças de cores e padding

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="contato">
         <div class="coluna-esquerda">
-            <h2>Entre em contato</h2>
+            <h2>Entre em contato!"</h2>
         <ul>
             <li>Rua Alegre, 123, Cidade Brasileira</li>
             <li>Tel: (12) 3456-7890</li>
