--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
 
     <section id="contato">
         <div class="coluna-esquerda">
-            <h2>Entre em contato!"</h2>
-        <ul>
-            <li>Rua Alegre, 123, Cidade Brasileira</li>
-            <li>Tel: (12) 3456-7890</li>
-            <li>ola@grandesite.com.br</li>
-        </ul>
-        <h2>Me acompanhe nas redes</h2>
+            <div id="contato-info">
+                <h2>Entre em contato!"</h2>
+                <ul>
+                    <li>Rua Alegre, 123, Cidade Brasileira</li>
+                    <li>Tel: (12) 3456-7890</li>
+                    <li>ola@grandesite.com.br</li>
+                </ul>
+                <h2>Me acompanhe nas redes</h2>
+            </div>
             <ul class="redes">
                 <li><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a></li>
                 <li><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
